# ModlessChatTrans

./: .gitignore  README.md  README_CN.md  README_EN.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: easy_guide_zh.md  glossary_guide_en.md  glossary_guide_zh.md
i18n/: de_DE.po  en_US.po  es_ES.po  fr_FR.po  ja_JP.po  ko_KR.po  pt_BR.po  ru_RU.po  translations.pot  zh_CN.po  zh_TW.po
locales/de_DE/LC_MESSAGES/: translations.mo
locales/en_US/LC_MESSAGES/: translations.mo
locales/es_ES/LC_MESSAGES/: translations.mo
locales/fr_FR/LC_MESSAGES/: translations.mo
locales/ja_JP/LC_MESSAGES/: translations.mo
locales/ko_KR/LC_MESSAGES/: translations.mo
locales/pt_BR/LC_MESSAGES/: translations.mo
locales/ru_RU/LC_MESSAGES/: translations.mo
locales/zh_CN/LC_MESSAGES/: translations.mo
modless_chat_trans/: clipboard_monitor.py  display.py  file_utils.py  i18n.py  interface.py  log_monitor.py  message_processor.py  packet_processor.py  process_message.py  translator.py  transparent_proxy.py  updater.py  web_display.py
src/: main.py  modless-chat-trans.default.json  modless-chat-trans.default.toml
src/modless_chat_trans/: clipboard_monitor.py  config.py  file_utils.py  i18n.py  interface.py  log_monitor.py  logger.py  message_processor.py  network.py  new_interface.py  translator.py  updater.py  web_display.py
src/templates/: index.html
static/css/: base.css  cyberpunk.css  fluent.css  material.css  retro_terminal.css  skeuomorphic.css
static/js/: main.js
templates/: index.html
tools/: compile_translations.py
(+19 files in other folders)
